--- a/index.ipynb
+++ b/index.ipynb
@@ -406,32 +406,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sex</th>\n",
+       "      <th>female</th>\n",
+       "      <th>male</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34.531646</td>\n",
+       "      <td>41.025474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27.757353</td>\n",
+       "      <td>30.982234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21.892857</td>\n",
+       "      <td>26.437942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>?</th>\n",
+       "      <td>32.812500</td>\n",
+       "      <td>32.619048</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Pclass  Sex   \n",
-       "1       female    34.531646\n",
-       "        male      41.025474\n",
-       "2       female    27.757353\n",
-       "        male      30.982234\n",
-       "3       female    21.892857\n",
-       "        male      26.437942\n",
-       "?       female    32.812500\n",
-       "        male      32.619048\n",
-       "dtype: float64"
+       "Sex        female       male\n",
+       "Pclass                      \n",
+       "1       34.531646  41.025474\n",
+       "2       27.757353  30.982234\n",
+       "3       21.892857  26.437942\n",
+       "?       32.812500  32.619048"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pivoted = grouped.pivot(index='Pclass', columns = 'Sex', values='Age')\n",
-    "pivoted.unstackstack()"
+    "pivoted"
    ]
   },
   {
